<resources>
    <string name="app_name">Champions</string>
    <string name="action_settings">Settings</string>
    <string name="alert_title">¿Desea borrar el equipo seleccionado?</string>
    <string name="bt_ok">Aceptar</string>
    <string name="bt_cancel">Cancelar</string>
    <string name="name">Nombre</string>
    <string name="country">Selecciona el País</string>
    <string name="rival">Rival</string>
    <string name="photo">Selecciona escudo</string>
    <string name="champions">Champions ganadas</string>
    <string name="generic_error">Ha ocurrido un error, intentelo más tarde</string>
    <string name="title_new_element">Agrega equipo</string>
    <string name="club_add_success">El equipo se ha añadido correctamente</string>
    <string name="update_club">Actualiza los datos</string>
    <string name="add_champions">Añadir</string>

</resources>
