<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="android.view.View" />

        <variable
            name="vm"
            type="com.asv.champions.ui.clubadd.ClubAddViewModel" />
    </data>
    <android.support.design.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
           >

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:contentScrim="?attr/colorPrimary"
                app:expandedTitleMarginStart="48dp"
                app:expandedTitleMarginEnd="64dp"
               >

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:srcCompat="@{vm.urlImage}"
                    />

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                    app:layout_collapseMode="pin" />

            </android.support.design.widget.CollapsingToolbarLayout>

        </android.support.design.widget.AppBarLayout>
        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"

            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_medium"
                    android:paddingTop="@dimen/spacing_large"
                    >

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_medium"
                    >

                    <EditText
                        android:id="@+id/et_rival"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="@string/rival"
                        android:inputType="text"
                        android:singleLine="true" />
                </android.support.design.widget.TextInputLayout>
                <LinearLayout
                    android:id="@+id/ll_country"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_medium"
                    android:paddingTop="@dimen/spacing_large"
                    android:paddingBottom="@dimen/spacing_large"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@color/colorGrayWhite"
                    >

                    <TextView
                        android:id="@+id/et_country"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:textSize="17sp"
                        android:layout_marginStart="@dimen/spacing_small"
                        />
                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lb_ic_actions_right_arrow"
                        android:tint="@color/colorMsgText"
                        android:rotation="90"
                        android:layout_marginStart="@dimen/spacing_large"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    />

                <LinearLayout
                    android:id="@+id/ll_photo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_medium"
                    android:paddingTop="@dimen/spacing_large"
                    android:paddingBottom="@dimen/spacing_large"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@color/colorGrayWhite"
                    >

                    <TextView
                        android:id="@+id/tv_select_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/photo"
                        android:textSize="17sp"
                        android:layout_marginStart="@dimen/spacing_small"
                        />
                    <ImageView
                        android:layout_width="10dp"
                        android:layout_height="wrap_content"
                        android:src="@drawable/lb_ic_actions_right_arrow"
                        android:tint="@color/colorMsgText"
                        android:rotation="90"
                        android:layout_marginStart="@dimen/spacing_large"
                        />
                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"
                    android:layout_marginStart="@dimen/spacing_medium"
                    android:layout_marginEnd="@dimen/spacing_medium"
                    />
                <LinearLayout
                    android:id="@+id/ll_champions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/spacing_medium"
                    android:paddingEnd="@dimen/spacing_medium"
                    android:paddingTop="@dimen/spacing_large"
                    android:paddingBottom="@dimen/spacing_large"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:background="@color/colorGrayWhite"
                    >

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="wrap_content"
                        android:text="@string/champions"
                        android:textSize="17sp"
                        android:layout_marginStart="@dimen/spacing_small"
                        />

                    <TextView
                        android:id="@+id/tv_add_champions"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_champions"
                        android:gravity="right"
                        android:textSize="19sp"
                        android:layout_marginEnd="@dimen/spacing_small"
                        android:textStyle="bold"

                        />
                </LinearLayout>
                <TextView
                    android:id="@+id/tv_error"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorRed"
                    android:layout_marginTop="@dimen/spacing_large"
                    android:gravity="center"
                    android:visibility="gone"
                    />
                <ListView
                    android:id="@+id/list"
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent">
                </ListView>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_next"
            app:fabSize="normal"
            app:maxImageSize="18dp"
            app:backgroundTint="@color/colorOrange"
            />

    </android.support.design.widget.CoordinatorLayout>
</layout>